--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+form{
+  width: 250px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+input,textarea{
+  border: none;
+  padding:0 8px;
+  border-bottom: 1px solid gray;
+}
+input::placeholder, textarea::placeholder{
+  font-size: 12px;
+  color: rgb(179, 174, 174);
+}
+.submitButton{
+  border: none;
+  padding:  5px;
+  border-radius: 8px;
+  color: white;
+  background-color: tomato;
+  cursor: pointer;
+}
