--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.paperMedia{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .typed{
   color: tomato;
 }
@@ -19,21 +24,26 @@ code {
   .mapTitle{
     height: 60vh !important;
     margin-top: 5px !important;
-    margin-right: 5px!important;
+    margin-right: -5px!important;
     margin-left: 5px !important;
   }
 }
 @media (max-width:"786px"){
   .paperMedia{
     width: 100%;
-    margin-right: 10px;
+    margin-right: -60px;
     margin-left: 10px;
     margin-top: 30px;
+    background-color: white !important;
     
   }
   .typed{
     font-size: 6px;
   }
+}
+.marginTop{
+  margin-top: -15px !important;
+  margin-bottom: 12px !important;
 }
 
 @media (max-width:786px){
@@ -46,3 +56,4 @@ margin-top: -300px !important;
 
   }
 }
+
