--- a/src/index.css
+++ b/src/index.css
@@ -56,4 +56,14 @@ margin-top: -300px !important;
 
   }
 }
-
+.mapContainer{
+width: 100px;
+  position: relative;
+}
+.restaurantMark{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
